# service-manager-cpp

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  config.json
.github/workflows/: build.yml
src/: dummy_process.cpp  main.cpp
src/classes/: ConfigMgr.cpp  ConfigMgr.hpp  SvcMgr.cpp  SvcMgr.hpp
